// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backends local backend typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { LocalBackend, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new LocalBackend(this, {
      path: "relative/path/to/terraform.tfstate",
    });
  }
}
"
`;

exports[`backends remote backend typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { RemoteBackend, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new RemoteBackend(this, {
      hostname: "app.terraform.io",
      organization: "company",
      workspaces: [
        {
          name: "my-app-prod",
        },
      ],
    });
  }
}
"
`;

exports[`backends remote state types typescript snapshot 1`] = `
"import { Construct } from "constructs";
import {
  DataTerraformRemoteStateEtcdV3,
  DataTerraformRemoteStateS3,
  TerraformStack,
} from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new DataTerraformRemoteStateEtcdV3(this, "etcdv3", {
      endpoints: ["etcd-1:2379", "etcd-2:2379", "etcd-3:2379"],
      lock: true,
      prefix: "terraform-state/",
    });
    new DataTerraformRemoteStateS3(this, "s3", {
      bucket: "mybucket",
      key: "path/to/my/key",
      region: "us-east-1",
    });
  }
}
"
`;

exports[`backends remote state typescript snapshot 1`] = `
"import { Construct } from "constructs";
import { DataTerraformRemoteState, TerraformStack } from "cdktf";
class MyConvertedCode extends TerraformStack {
  constructor(scope: Construct, name: string) {
    super(scope, name);
    new DataTerraformRemoteState(this, "vpc", {
      organization: "hashicorp",
      workspaces: [
        {
          name: "vpc-prod",
        },
      ],
    });
  }
}
"
`;
